frontend/src/pages/Main/components/Track/styles.module.scss
@import "src/styles/functions";
@import "src/styles/variables";

.track {
    display: flex;
    align-items: center;
    justify-content: space-between;
    font-size: setUnit(14);
    border-radius: setUnit(5);
    padding: setUnit(5) setUnit(5);
    overflow: auto;

    &.active {
        box-shadow: setUnit(2) setUnit(2) setUnit(8) rgba(0,0,0,.5);
    }

    @media screen and (max-width: setUnit($mobile)) {
        font-size: setUnit(12);
    }

    .rating {
        margin-right: setUnit(15);
    }

    &:nth-child(even) {
        background: $lightColor;
        border: 1px solid darken($lightColor, 10);
    }

    .head {
        display: flex;
        align-items: center;

        .loader {
            font-size: setUnit(2.5);
            color: $lightColor;
            height: 0;
        }
    }

    .info {
        color: $darkColor;
        margin-left: setUnit(10);

        .author {
            margin-bottom: setUnit(4);
        }

        .trackName {
            @media screen and (max-width: setUnit($mobile-small)) {
                white-space: nowrap;
                text-overflow: ellipsis;
                overflow: hidden;
                width: 40px;
            }
        }
    }

    .meta {
        display: flex;
        align-items: center;
        margin-left: setUnit(15);
    }
}

